--- a/c#.netcode/VMware.VCDRService_legacy/VMware.VCDRService_legacy.csproj
+++ b/c#.netcode/VMware.VCDRService_legacy/VMware.VCDRService_legacy.csproj
@@ -46,10 +46,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiException.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="ClientPart2.cs" />
+    <Compile Include="CloudServicePlatform.cs" />
+    <Compile Include="IrrServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PSClasses.cs" />
+    <Compile Include="VcdrBackendPlatform.cs" />
+    <Compile Include="VcdrSummary.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
