--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /c#.netcode/VMware.VCDRService_legacy/obj
 /c#.netcode/.vs
 /c#.netcode/VCDRTest/Properties/launchSettings.json
+c\#.netcode/VCDRTest/VCDRTest.csproj.user
