--- a/NSwag/VcdrBackendPlatform.yaml
+++ b/NSwag/VcdrBackendPlatform.yaml
@@ -16,29 +16,28 @@ security:
 
 servers:
   - description: VCDR production backend
-    url: 'https://vcdrsp-prd-vcdr-backend-res01-prd-us-west-2.vdp.vmware.com/api/vcdr' 
+    url: 'https://vcdrsp-prd-vcdr-backend-res01-prd-us-west-2.vdp.vmware.com/api' 
+ 
 schemes:
   - https
+
+produces:
+  - application/json
+  - text/plain
 tags:
-  - name: vcdr-org
-    description: 'CSP Org related APIs (Query VCDR tenant orgs, Service Instances etc.,)'
+  - name: deployment-vcdr
+    description: VCDR self-service APIs for Deployment (Deploy / Un-Deploy, Link with CSP etc.,)
 paths:
   
-  /org/{org-id}/deployments:
+  /vcdr/org/{org-id}/deployments:
     get:
       tags:
-        - vcdr-org
-      summary: Get all Deployments in given org
-      description: Get all Deployments in given org
-      operationId: getTenantDeployments
+        - deployment-vcdr
+      summary: Get all VCDR Deployments in given org
+      description: Get all VCDR Deployments in given org
+      operationId: getVcdrDeployments
       parameters:
-        - name: org-id
-          in: path
-          description: ORG identifier
-          required: true
-          example: 55f1a417-1c88-4bc0-aa38-5edb7ab6b47a
-          schema:
-            type: string  
+        - $ref: '#/parameters/orgIdPathParam' 
       responses:
         '200':
           description: OK
@@ -54,6 +53,8 @@ paths:
           description: Unauthorized
         '403':
           description: Forbidden
+        '404':
+          description: Not Found
         '500':
           description: Internal Server Error
    
@@ -67,8 +68,14 @@ components:
       in: header
       name: csp-auth-token
       
-  parameters: 
-
+  parameters:
+    orgIdPathParam:
+      name: org-id
+      in: path
+      description: organization identifier
+      required: true
+      type: string
+      format: uuid 
     orgIdQueryParam:
       name: org-id
       in: query
@@ -79,50 +86,114 @@ components:
         #format: uuid 
         example: "55f1a417-1c88-4bc0-aa38-5edb7ab6b47a"
       
-  schemas:
-    TenantOrchestratorConfig:
-      title: >-
-        Deployment configuration for VCDR orchestrator (Control Shift / IRR)
-        exposed to Tenants.
-      type: object
-      properties:
-        ip:
-          type: string
-          description: VCDR gateway IP.
-          example: 72.34.122.1
-        url:
-          type: string
-          description: VCDR gateway URL.
-          example: https://foobar-1234.vcdr.vmware.com
-    TenantCloudProviderConfig:
-      title: Cloud Provider config in Deployment exposed to Tenants
-      type: object
+  schemas: 
+    TenantDeployment:
+      title: Deployment info exposed to Tenant orgs
+      type: object 
       required:
-        - provider
-        - region
+        - id
+        - type
+        - state
+        - spec
+        - start_time
+        - created_by
+        - org_id
+        - current_version
+        - upgrade
+        - release_type
+        - lambda
       properties:
-        provider:
-          $ref: '#/components/schemas/CloudProvidersEnum'
-        region:
+        id:
+          type: string
+          format: uuid
+          description: Deployment ID
+          example: b25fa423-1800-4ffb-b7cf-0ea4d0bd75b2
+        type:
+          $ref: '#/components/schemas/ServiceTypeEnum'
+        state:
+          $ref: '#/components/schemas/DeploymentStatesEnum'
+        current_version:
+          type: string
+          description: Current version number of deployment
+          minLength: 1
+          example: 7.23.0.0
+        upgrade:
+          $ref: '#/components/schemas/DeploymentUpgradeStatusEnum'
+        release_type:
+          $ref: '#/components/schemas/ReleaseTypeEnum'
+        lambda:
+          $ref: '#/components/schemas/LambdaTypeEnum'
+        lambda_migration_state:
+          $ref: '#/components/schemas/LambdaMigrationStateEnum'
+        spec:
+          $ref: '#/components/schemas/TenantDeploymentSpec'
+        start_time:
+          description: Time at which Deployment started
+          type: string
+          format: 'date-time'
+          example: "2021-11-02T23:20:15Z"
+        end_time:
+          description: Time at which Deployment completed
+          type: string
+          format: 'date-time'
+          example: "2021-11-02T23:23:12Z"
+        deletion_requested_time:
+          nullable: true
+          description: Time at which deployment deletion is requested.
+          type: string
+          format: 'date-time'
+          example: "2021-11-03T23:23:12Z"
+        config:
+          $ref: '#/components/schemas/TenantDeploymentConfig'
+        created_by:
+          type: string
+          description: User who created the deployment.
+          example: "user1@acme.com"
+        deletion_requested_by:
           type: string
           nullable: true
-          description: Cloud Provider Region ID in which deployment was requested
-          example: us-west-2
-    TenantDeploymentConfig:
-      title: Deployment configurations exposed to Tenant
-      type: object
-      properties:
-        subscription_info:
-          $ref: '#/components/schemas/SubscriptionConfig'
-        cloud_provider:
-          $ref: '#/components/schemas/TenantCloudProviderConfig'
-        orchestrator:
-          $ref: '#/components/schemas/TenantOrchestratorConfig'
+          description: User who requested to delete deployment.
+          example: "user2@acme.com"
+        org_id:
+          type: string
+          description: Org id
+          example: 1a2ef44d-ccb6-408d-bbbe-8e374a17afc1
+    ServiceTypeEnum:
+      title: Service Types
+      type: string
+      enum:
+        - VCDR
+        - VMCFS
+      example: VCDR
+    ReleaseTypeEnum:
+      title: Release Types
+      type: string
+      default: 'GA'
+      enum:
+        - GA
+        - EA
+      example: GA
+    LambdaTypeEnum:
+      title: Lambda type enum
+      type: string
+      enum:
+        - COMMON
+        - INDIVIDUAL
+      example: COMMON 
+    LambdaMigrationStateEnum:
+      title: Lambda migration state enum
+      type: string
+      enum:
+        - NOT_STARTED
+        - IN_PROGRESS
+        - FAILED
+        - COMPLETED
+        - NOT_APPLICABLE
+      example: NOT_STARTED
     TenantDeploymentSpec:
       title: Deployment specification in Tenant org
       type: object
       required:
-        - type
         - provider
         - region
       properties:
@@ -131,30 +202,38 @@ components:
           description: Name of deployment
           maxLength: 127
           example: VCDR (us-west-2)
-        type:
-          $ref: '#/components/schemas/DeploymentTypesEnum'
         provider:
           $ref: '#/components/schemas/CloudProvidersEnum'
         region:
           type: string
-          nullable: true
           description: Cloud Provider Region ID
           example: us-west-2
+          minLength: 1
+        seller_id:
+          nullable: true
+          type: string
+          minLimit: 1
+          maxLimit: 256
         seller:
           $ref: '#/components/schemas/SellerOfRecordEnum'
-  
-    DeploymentTypesEnum:
-      title: Deployment Types
-      type: string
-      enum:
-        - VCDR
-      example: VCDR
+    TenantDeploymentConfig:
+      title: Deployment configurations exposed to Tenant
+      type: object
+      properties:
+        subscription_info:
+          $ref: '#/components/schemas/SubscriptionConfig'
+        cloud_provider:
+          nullable: true
+          $ref: '#/components/schemas/TenantCloudProviderConfig'
+        orchestrator:
+          nullable: true
+          $ref: '#/components/schemas/TenantOrchestratorConfig'
     CloudProvidersEnum:
       title: Cloud Provider Types
       type: string
       enum:
         - AWS
-        - MOCK
+        - MOCK # Mock Cloud Provider to potentially fake deployment
       example: AWS
     SellerOfRecordEnum:
       title: Seller Of Records
@@ -168,20 +247,47 @@ components:
       title: Subscription config in Deployment
       type: object
       properties:
+        seller:
+          type: string
+          minLimit: 1
+          maxLimit: 256
         paid_pilot:
           type: boolean
-          nullable: true
           description: Whether Paid pilot was activated during deployment
           example: false
         term_subscription:
           type: boolean
-          nullable: true
           description: Whether TERM subscription is activated in given geo
           example: false
+    TenantCloudProviderConfig:
+      title: Cloud Provider config in Deployment exposed to Tenants
+      type: object
+      required:
+        - provider
+        - region
+      properties:
+        provider:
+          $ref: '#/components/schemas/CloudProvidersEnum'
+        region:
+          type: string
+          description: Cloud Provider Region ID in which deployment was requested
+          example: us-west-2
+    TenantOrchestratorConfig:
+      title: Deployment configuration for VCDR orchestrator (Control Shift / IRR) exposed to Tenants.
+      type: object
+      properties:
+        ip:
+          type: string
+          description: VCDR gateway IP.
+          example: 72.34.122.1
+        url:
+          type: string
+          description: VCDR gateway URL.
+          example: https://foobar-1234.vcdr.vmware.com
     DeploymentStatesEnum:
       title: Deployment States
       type: string
-      enum:
+      enum: # TODO add more states as needed
         - IN_PROGRESS
         - READY
         - FAILED
@@ -191,63 +297,11 @@ components:
         - DELETION_FAILED
         - DELETED
       example: IN_PROGRESS
-    TenantDeployment:
-      title: Deployment info exposed to Tenant orgs
-      type: object
-      required:
-        - id
-        - type
-        - state
-        - spec
-        - start_time
-        - created_by
-        - org_id
-      properties: 
-        id:
-          type: string
-          format: uuid
-          description: Deployment ID
-          example: b25fa423-1800-4ffb-b7cf-0ea4d0bd75b2
-        type:
-          $ref: '#/components/schemas/DeploymentTypesEnum'
-        state:
-          $ref: '#/components/schemas/DeploymentStatesEnum'
-        spec:
-          $ref: '#/components/schemas/TenantDeploymentSpec'
-        start_time:
-          description: Time at which Deployment started
-          type: string
-          format: 'date-time'
-          example: "2021-11-02T23:20:15Z"
-        end_time:
-          description: Time at which Deployment completed
-          type: string
-          format: 'date-time'
-          example: "2021-11-02T23:23:12Z"
-          nullable: true
-        deletion_requested_time:
-          description: Time at which deployment deletion is requested.
-          type: string
-          format: 'date-time'
-          example: "2021-11-03T23:23:12Z"
-          nullable: true
-        config:
-          $ref: '#/components/schemas/TenantDeploymentConfig'
-        created_by:
-          type: string
-          description: User who created the deployment.
-          example: "user1@acme.com"
-        deletion_requested_by:
-          type: string
-          description: User who requested to delete deployment.
-          example: "user2@acme.com"
-          nullable: true
-        org_id:
-          type: string
-          description: Org id
-          example: 1a2ef44d-ccb6-408d-bbbe-8e374a17afc1
-
-    
-     
- 
-      
+    DeploymentUpgradeStatusEnum:
+      title: Deployment upgrade eligibility
+      type: string
+      enum:
+        - ALLOWED
+        - NOT_ALLOWED
+        - ON_HOLD
+      example: ALLOWED
