update Newtonsoft.Json to version 13.0.3

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /c#.netcode/.vs
 /c#.netcode/VCDRTest/Properties/launchSettings.json
 c\#.netcode/VCDRTest/VCDRTest.csproj.user
+c\#.netcode/VCDRTest/VCDRTest.csproj.user
