modified:   .gitignore  	modified:   build.ps1  	renamed:    publish/VMware.VCDRService-7-26-0-Beta.zip -> publish/VMware.VCDRService-7-26-0.zip  	modified:   publish/VMware.VCDRService/7.26.0/VMware.VCDRService.psd1  	modified:   publish/VMware.VCDRService/7.26.0/net/VMware.VCDRService.psd1  	modified:   publish/VMware.VCDRService/7.26.0/netcore/VMware.VCDRService.psd1  	modified:   test.ps1

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /c#.netcode/VCDRTest/Properties/launchSettings.json
 c\#.netcode/VCDRTest/VCDRTest.csproj.user
 c\#.netcode/VCDRTest/VCDRTest.csproj.user
+.vscode/launch.json 
